syntax = "proto3";

message PlantVariety {
  string id = 1;
  string genus = 2;
  string species = 3;
  string description = 4;
}

message PlantItem {
  string plant_variety_id = 1;
  string item_name = 2;
}

message PlantInstruction {
  string plant_variety_id = 1;
  uint32 step_number = 2;
  string instruction = 3;
}

message PlantScientificDetails {
  string plant_variety_id = 1;
  float ph_low = 2;
  float ph_high = 3;
  float temperature_low = 4;
  float temperature_high = 5;
}

message Comments {
  uint32 id = 1;
  string plant_variety_id = 2;
  string user_id = 3;
  string comment_description = 4;
}

message Ratings {
  uint32 id = 1;
  string plant_variety_id = 2;
  string user_id = 3;
  uint32 rating = 4;
}

enum Unit {
  GRAM = 0;
  LITER = 1;
}

message Distribution {
    string distribution_slug = 1;
    string name = 2;
    string tdwg_code = 3;
    uint32 level = 4;
    string parent_slug = 5;
    string parent_name = 6;
    uint32 species_count = 7;
}
